--- a/Text_Classification_with_BERT.ipynb
+++ b/Text_Classification_with_BERT.ipynb
@@ -31,7 +31,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Importing modules"
+        "## Importing packages"
       ]
     },
     {
